mathjax,paiza.space

--- a/paiza.html
+++ b/paiza.html
@@ -155,8 +155,7 @@
           <div class="col-md-6 col-sm-6 col-xs-12">
             <h3>現在の状況</h3>
             <hr>
-            <h4>　私は現在Bランクを獲得しています。このサイトを知り、取り組み始めたころはCランクの問題も解けない状態であったため、成果はでている
-            のかと思います。しかし未だにA・Sランクの問題は解けないため、まだまだ勉強が必要なのも実感しています。</h4>
+            <h4>　私は現在Bランクを獲得しています。このサイトを知り、取り組み始めたころはCランクの問題も解けない状態であったため、成果はでているのかと思います。しかし未だにA・Sランクの問題は解けないため、まだまだ勉強が必要なのも実感しています。</h4>
             <h4>　現在はJavaを用いたWebアプリケーションに興味を持っているため、この学習サービスでもJavaで問題を解いています</h4>
           </div>
           <div class="col-md-6 col-sm-6 hidden-xs">
