--- a/funecm.html
+++ b/funecm.html
@@ -159,7 +159,7 @@
           <h4>　その手段として私たちは高速に素因数分解を行うECMプログラムの実装、またECMを広報する手段としてWebサイトの制作を行いました。</h4>
           <h3>私の役割</h3>
           <hr>
-          <h4>　私は、プロジェクトの中で広報班として主にWebサイトの制作・公開を行いました。ECMの内容が専門的であるため、より理解しやすいWebサイトにすることを意識して制作しました</h4>
+          <h4>　私は、プロジェクトの中で広報班として主にWebサイトの制作・公開を行いました。ECMの内容が専門的であるため、より理解しやすいWebサイトにすることを意識して制作しました。</h4>
           <h4>　実際に公開したWebサイトは「<a href="https://neglect-yp.github.io/funecm-website/index.html" target="_blank">こちら</a>」です。</h4>
         </div>
         <div class="col-xs-12 hidden-lg hidden-md hidden-sm">
@@ -300,7 +300,7 @@
           <h3>ECMプログラム</h3>
           <hr>
           <h4>　実際のECMプログラムの中で基本となる部分の解説をします。</h4>
-          <h4>　main.cでは、ECMに必要な値を求めています。私たちが発見したAtkin Moraign ECPP使用する場合と使用しない場合の条件分岐もしています。</h4>
+          <h4>　main.cでは、ECMの処理に使う値を準備します。私たちが発見したAtkin Moraign ECPP使用する場合と使用しない場合の条件分岐もしています。ここで決めた値を用いてECMを行います。<br>　乱数の偏りを防ぐために現在時刻を基準に乱数を決めています。</h4>
         </div>
         <div class="col-md-6 col-sm-6 hidden-xs">
           <a href="img/program1.jpg" rel="lightbox"><img src="img/program1.jpg" class="sizebox"></a>
