--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h3 class="raleway">About me</h3>
             <div class="h2space"></div>
             <h4>初めまして。公立はこだて未来大学 情報システムコースの山下哲平です。僕は大学で情報システムを選考していて、プログラミングをするのが好きです。
-              <br>現在は主にJavaを用いたウェブアプリケーションの開発に興味を持っているので、今後実際にアプリケーションを開発・公開していきたい思っています。</h4>
+              <br>現在は主にJavaを用いたウェブアプリケーションの開発に興味を持っているので、今後実際にアプリケーションを開発・公開していきたいと思っています。</h4>
               <hr>
               <h4>生まれ：北海道札幌市<br>趣味：ビリヤード・ダーツ・ピアノ・食べること<br>好きなスポーツ：野球・水泳<br>得技：卵焼き</h4>
               <div class="h2space"></div>
