--- a/funecm.html
+++ b/funecm.html
@@ -185,7 +185,7 @@
         <div class="col-md-6 col-sm-6 col-xs-12">
           <h3>楕円曲線グラフの実装</h3>
           <hr>
-          <h4>　楕円曲線というワードを聞いて、グラフをイメージできる人はそんなに多くないと思います。しかしECMを理解するうえで楕円曲線は非常に重要です。</h4>
+          <h4>　楕円曲線というワードを聞いて、グラフをイメージできる人はそれほど多くないと思います。しかしECMを理解するうえで楕円曲線は非常に重要です。</h4>
           <h4>　そこで、楕円曲線をより理解してもらう方法としてWebサイト上で動く楕円曲線のグラフををJavaScriptを用いて実装しました。実装には、「<a href="https://jsxgraph.uni-bayreuth.de/wp/download.html" target="_blank">こちらのサイト</a>」を参考にしました。</h4>
           <h4>　実装したグラフでは楕円曲線の定数の値を変えることができるため、実際に触れながら理解することができると思います。こちらのページでも同様のものを実装したためぜひ動かしてみてください。</h4>
         </div>
