--- a/funecm.html
+++ b/funecm.html
@@ -300,7 +300,7 @@
           <h3>ECMプログラム</h3>
           <hr>
           <h4>　実際のECMプログラムの中で基本となる部分の解説をします。</h4>
-          <h4>　main.cでは、ECMの処理に使う値を準備します。私たちが発見したAtkin Moraign ECPP使用する場合と使用しない場合の条件分岐もしています。ここで決めた値を用いてECMを行います。<br>　乱数の偏りを防ぐために現在時刻を基準に乱数を決めています。</h4>
+          <h4>　main.cでは、ECMの処理に使う値を準備します。私たちが発見したAtkin Moraign ECPP使用する場合と使用しない場合の条件分岐もしています。ここで決めた値を用いてECMを行います。<br>　randseedでは、乱数の偏りを防ぐために現在時刻を基準に乱数を決めています。</h4>
         </div>
         <div class="col-md-6 col-sm-6 hidden-xs">
           <a href="img/program1.jpg" rel="lightbox"><img src="img/program1.jpg" class="sizebox"></a>
