unity,unity_code1_img

--- a/unity.html
+++ b/unity.html
@@ -186,7 +186,7 @@
         <h4>　Jump()という関数を作成し、女の子が地面に着いているときのみこの関数が動くようにしました。これにより女の子は一回しかジャンプできません。また、ジャンプ中は左右に反応しない制御も加えています。</h4>
       </div>
       <div class="col-xs-12 hidden-lg hidden-md hidden-sm">
-        <img src="img/unity_code.jpg" class="sizebox">
+        <img src="img/unity_code1.jpg" class="sizebox">
       </div>
     </div>
   </div>
