--- a/funecm.html
+++ b/funecm.html
@@ -210,9 +210,9 @@
         </div>
         <div class="col-xs-12 hidden-lg hidden-md hidden-sm">
           <p class="graph-title">
-            楕円曲線 \(y=x^3+ax+b\) のグラフ<br>
+            楕円曲線 \(y^2=x^3+ax+b\) のグラフ<br>
           </p>
-          <div id='jxgbox' class='jxgbox' style='width:100%; height:400px;'></div>
+          <div id='jxgbox' class='jxgbox' style='width:90%; height:400px;'></div>
           <script type='text/javascript'>
           JXG.Options.axis.strokeColor = '#cccccc';
           brd = JXG.JSXGraph.initBoard('jxgbox', {boundingbox: [-15, 10, 15, -10], axis:true});
