--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <div id="tf-why-me">
       <div class="overlay">
-        <div class="container-fluid">
+        <div class="container">
           <div class="row text-pos">
             <div class="col-md-6 col-sm-6">
               <h3 class="raleway">Skill</h3>
