funecm jxgbox index

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h1>TEPPEI YAMASHITA portfolio</h1>
           <hr>
           <div class="space20"></div>
-          <h3>こんちには。</h3>
+          <h3>こんにちは。</h3>
           <h3>公立はこだて未来大学 情報システムコース所属の 山下哲平 です。</h3>
           <div class="space30"></div>
           <a href="#tf-portfolio" class="btn btn-primary my-btn2">My Works</a>
