--- a/funecm.html
+++ b/funecm.html
@@ -212,10 +212,10 @@
           <p class="graph-title">
             楕円曲線 \(y^2=x^3+ax+b\) のグラフ<br>
           </p>
-          <div id='jxgbox1' class='jxgbox' style='width:100%; height:400px;'></div>
+          <div id='jxgbox' class='jxgbox' style='width:100%; height:400px;'></div>
           <script type='text/javascript'>
           JXG.Options.axis.strokeColor = '#cccccc';
-          brd = JXG.JSXGraph.initBoard('jxgbox1', {boundingbox: [-15, 10, 15, -10], axis:true});
+          brd = JXG.JSXGraph.initBoard('jxgbox', {boundingbox: [-15, 10, 15, -10], axis:true});
           brd.suspendUpdate();
           var b = brd.create('slider',[[1,-3],[10,-3],[-15,2.10,15]],{name:'a'});
           var a = brd.create('slider',[[1,-4],[10,-4],[-15,-9.52,15]],{name:'b'});
