--- a/funecm.html
+++ b/funecm.html
@@ -208,7 +208,7 @@
           brd.unsuspendUpdate();
           </script>
         </div>
-        <div class="col-xs-12 hidden-lg hidden-md hidden-sm">
+        <!-- <div class="col-xs-12 hidden-lg hidden-md hidden-sm">
           <p class="graph-title">
             楕円曲線 \(y^2=x^3+ax+b\) のグラフ<br>
           </p>
@@ -226,7 +226,7 @@
           {strokeWidth:3,strokeColor:'black'});
           brd.unsuspendUpdate();
           </script>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="space50"></div>
