--- a/funecm.html
+++ b/funecm.html
@@ -208,14 +208,14 @@
           brd.unsuspendUpdate();
           </script>
         </div>
-        <!-- <div class="col-xs-12 hidden-lg hidden-md hidden-sm">
+        <div class="col-xs-12 hidden-lg hidden-md hidden-sm">
           <p class="graph-title">
             楕円曲線 \(y^2=x^3+ax+b\) のグラフ<br>
           </p>
           <div id='jxgbox1' class='jxgbox' style='width:100%; height:400px;'></div>
           <script type='text/javascript'>
           JXG.Options.axis.strokeColor = '#cccccc';
-          brd = JXG.JSXGraph.initBoard('jxgbox1', {boundingbox: [-15, 10, 15, -10], axis:true});
+          brd = JXG.JSXGraph.initBoard('jxgbox', {boundingbox: [-15, 10, 15, -10], axis:true});
           brd.suspendUpdate();
           var b = brd.create('slider',[[1,-3],[10,-3],[-15,2.10,15]],{name:'a'});
           var a = brd.create('slider',[[1,-4],[10,-4],[-15,-9.52,15]],{name:'b'});
@@ -226,7 +226,7 @@
           {strokeWidth:3,strokeColor:'black'});
           brd.unsuspendUpdate();
           </script>
-        </div> -->
+        </div>
       </div>
     </div>
     <div class="space50"></div>
