--- a/funecm.html
+++ b/funecm.html
@@ -35,10 +35,11 @@
         <div class="container">
           <!-- メニューバー -->
           <div class="navbar-header">
-            <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
               <span class="sr-only">Toggle navigation</span>
-              <p class="nav-p nav-color">MENU</p>
-              <span class="fa fa-chevron-down nav-color"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand logo" href="./index.html#tf-portfolio">&lt;</a>
           </div>
@@ -182,50 +183,52 @@
   <div class="contents-main">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-sm-6 col-xs-12">
+        <div class="col-md-12 col-sm-12 col-xs-12">
           <h3>楕円曲線グラフの実装</h3>
           <hr>
           <h4>　楕円曲線というワードを聞いて、グラフをイメージできる人はそれほど多くないと思います。しかしECMを理解するうえで楕円曲線は非常に重要です。</h4>
           <h4>　そこで、楕円曲線をより理解してもらう方法としてWebサイト上で動く楕円曲線のグラフををJavaScriptを用いて実装しました。実装には、「<a href="https://jsxgraph.uni-bayreuth.de/wp/download.html" target="_blank">こちらのサイト</a>」を参考にしました。</h4>
           <h4>　実装したグラフでは楕円曲線の定数の値を変えることができるため、実際に触れながら理解することができると思います。こちらのページでも同様のものを実装したためぜひ動かしてみてください。</h4>
         </div>
-        <div class="col-md-6 col-sm-6 hidden-xs">
-          <p class="graph-title">
-            楕円曲線 \(y^2=x^3+ax+b\) のグラフ<br>
-          </p>
-          <div id='jxgbox' class='jxgbox' style='width:100%; height:400px;'></div>
-          <script type='text/javascript'>
-          JXG.Options.axis.strokeColor = '#cccccc';
-          brd = JXG.JSXGraph.initBoard('jxgbox', {boundingbox: [-15, 10, 15, -10], axis:true});
-          brd.suspendUpdate();
-          var b = brd.create('slider',[[1,-3],[10,-3],[-15,2.10,15]],{name:'b'});
-          var a = brd.create('slider',[[1,-4],[10,-4],[-15,-9.52,15]],{name:'a'});
+        <div id="jxgbox"  style='width:100%; height:400px;'>
+          <div class="col-md-6 col-sm-6 hidden-xs">
+            <p class="graph-title">
+              楕円曲線 \(y^2=x^3+ax+b\) のグラフ<br>
+            </p>
+            <div class='jxgbox'></div>
+            <script type='text/javascript'>
+            JXG.Options.axis.strokeColor = '#cccccc';
+            brd = JXG.JSXGraph.initBoard('jxgbox', {boundingbox: [-15, 10, 15, -10], axis:true});
+            brd.suspendUpdate();
+            var b = brd.create('slider',[[1,-3],[10,-3],[-15,2.10,15]],{name:'b'});
+            var a = brd.create('slider',[[1,-4],[10,-4],[-15,-9.52,15]],{name:'a'});
 
-          var c1 = brd.create('functiongraph', [function(x){ return Math.sqrt(x*x*x+a.Value()*x+b.Value()); }],
-          {strokeWidth:3,strokeColor:'black'});
-          var c2 = brd.create('functiongraph', [function(x){ return -Math.sqrt(x*x*x+a.Value()*x+b.Value()); }],
-          {strokeWidth:3,strokeColor:'black'});
-          brd.unsuspendUpdate();
-          </script>
-        </div>
-        <div class="col-xs-12 hidden-lg hidden-md hidden-sm">
-          <p class="graph-title">
-            楕円曲線 \(y^2=x^3+ax+b\) のグラフ<br>
-          </p>
-          <div id='jxgbox1' class='jxgbox' style='width:100%; height:400px;'></div>
-          <script type='text/javascript'>
-          JXG.Options.axis.strokeColor = '#cccccc';
-          brd = JXG.JSXGraph.initBoard('jxgbox', {boundingbox: [-15, 10, 15, -10], axis:true});
-          brd.suspendUpdate();
-          var b = brd.create('slider',[[1,-3],[10,-3],[-15,2.10,15]],{name:'a'});
-          var a = brd.create('slider',[[1,-4],[10,-4],[-15,-9.52,15]],{name:'b'});
+            var c1 = brd.create('functiongraph', [function(x){ return Math.sqrt(x*x*x+a.Value()*x+b.Value()); }],
+            {strokeWidth:3,strokeColor:'black'});
+            var c2 = brd.create('functiongraph', [function(x){ return -Math.sqrt(x*x*x+a.Value()*x+b.Value()); }],
+            {strokeWidth:3,strokeColor:'black'});
+            brd.unsuspendUpdate();
+            </script>
+          </div>
+          <div class="col-xs-12 hidden-lg hidden-md hidden-sm">
+            <p class="graph-title">
+              楕円曲線 \(y^2=x^3+ax+b\) のグラフ<br>
+            </p>
+            <div class='jxgbox'></div>
+            <script type='text/javascript'>
+            JXG.Options.axis.strokeColor = '#cccccc';
+            brd = JXG.JSXGraph.initBoard('jxgbox', {boundingbox: [-15, 10, 15, -10], axis:true});
+            brd.suspendUpdate();
+            var b = brd.create('slider',[[1,-3],[10,-3],[-15,2.10,15]],{name:'a'});
+            var a = brd.create('slider',[[1,-4],[10,-4],[-15,-9.52,15]],{name:'b'});
 
-          var c1 = brd.create('functiongraph', [function(x){ return Math.sqrt(x*x*x+a.Value()*x+b.Value()); }],
-          {strokeWidth:3,strokeColor:'black'});
-          var c2 = brd.create('functiongraph', [function(x){ return -Math.sqrt(x*x*x+a.Value()*x+b.Value()); }],
-          {strokeWidth:3,strokeColor:'black'});
-          brd.unsuspendUpdate();
-          </script>
+            var c1 = brd.create('functiongraph', [function(x){ return Math.sqrt(x*x*x+a.Value()*x+b.Value()); }],
+            {strokeWidth:3,strokeColor:'black'});
+            var c2 = brd.create('functiongraph', [function(x){ return -Math.sqrt(x*x*x+a.Value()*x+b.Value()); }],
+            {strokeWidth:3,strokeColor:'black'});
+            brd.unsuspendUpdate();
+            </script>
+          </div>
         </div>
       </div>
     </div>
