--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <div class="container">
           <!-- メニューバー -->
           <div class="navbar-header">
-            <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
               <span class="sr-only">Toggle navigation</span>
-              <p class="nav-p nav-color">MENU</p>
-              <span class="fa fa-chevron-down nav-color"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
             </button>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
