--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
         <div class="row">
           <div class="col-md-6 col-sm-6 col-xs-12">
-            <article class="works　img-responsive" style="background-image: url(img/funecm.png)">
+            <article class="works" style="background-image: url(img/funecm.png)">
               <figure>
                 <figcaption class="worksoverlay">
                   <h2>より大きい桁数を素因数分解する<br>ECMプログラムの実装<br>「FUN-ECMプロジェクト」</h2>
